infrastructure/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcr-oe-frontend
  namespace: pcr
  labels:
    app: pcr-oe-frontend
    tier: frontend
spec:
  selector:
    matchLabels:
      app: pcr-oe-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: pcr-oe-frontend
        tier: frontend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: pcr-oe-frontend
          image: kallepan/pcr-oe-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          lifecycle:
            preStop:
              exec:
                command: ["/usr/bin/nginx", "-s", "quit"]
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 30
            timeoutSeconds: 60
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "512Mi"
          securityContext:
            allowPrivilegeEscalation: false
